# autoresearch-core

./: pyproject.toml
autoresearch_core/: __init__.py  delta.py  grpo.py  health.py  state.py  strategies.py  util.py
